style: fix the scrollbar color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,12 +56,13 @@
 }
 
 ::-webkit-scrollbar-track {
-    background-color: rgb(244 244 245)
+    background-color: hsl(240, 5%, 96%)
+            /* background-color: transparent; */
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgb(113 113 122);
-    border-radius: 2rem;
+    background-color: hsl(240, 4%, 46%, 0.4);
+        border-radius: 0.1rem;
 
 }
 
